fix: add missing margins

--- a/doconuxt-theme/assets/css/content.css
+++ b/doconuxt-theme/assets/css/content.css
@@ -57,7 +57,7 @@
 
   /* CODE BLOCKS */
   & .nuxt-content-highlight {
-    @apply bg-transparent text-base relative;
+    @apply bg-transparent text-base relative my-4;
     & > .filename {
       @apply absolute right-0 top-0 font-mono text-sm text-gray-500 select-none mr-1;
     }
@@ -98,7 +98,7 @@
 
   /* TABLES */
   & table {
-    @apply border-collapse overflow-auto;
+    @apply border-collapse overflow-auto my-4;
   }
   & th,
   & td {
